2018-10-20  Stuart Caie <kyzer@cabextract.org.uk>

	* src/chmextract.c: add anti "../" and leading slash protection to
	chmextract. I'm not pleased about this. All the sample code provided
	with libmspack is meant to be simple examples of library use, not
	"productised" binaries. Making the "useful" code samples install
	as binaries was a mistake. They were never intended to protect you
	from unpacking archive files with relative/absolute paths, and I
	would prefer that they never will be.

2018-10-17  Stuart Caie <kyzer@cabextract.org.uk>

	* cab.h: Make the CAB block input buffer one byte larger, to allow
	a maximum-allowed-size input block and the special extra byte added
	after the block by cabd_sys_read_block to help Quantum alignment.
	Thanks to Henri Salo for reporting this.

2018-10-17  Stuart Caie <kyzer@cabextract.org.uk>

	* chmd_read_headers(): again reject files with blank filenames, this
	time because their 1st or 2nd byte is null, not because their length
	is zero.  Thanks again to Hanno Böck for finding the issue.

2018-10-16  Stuart Caie <kyzer@cabextract.org.uk>

	* Makefile.am: using automake _DEPENDENCIES for chmd_test appears to
	override the default dependencies (e.g. sources), so libchmd.la was no
	longer considered a dependency of chmd_test. This breaks parallel
	builds like "make -j4". Added libchmd.la explicitly to dependencies.
	Thanks to Thomas Deutschmann for reporting this.

2018-10-16  Stuart Caie <kyzer@cabextract.org.uk>

	* cabd.c: add new parameter, MSCABD_PARAM_SALVAGE, which makes CAB file
	reading and extraction more lenient, to allow damaged or mangled CABs
	to be extracted. When enabled:
	- cabd->open() won't reject cabinets with files that have invalid
	  folder indices or filenames. These files will simply be skipped
	- cabd->extract() won't reject files with invalid lengths, but will
	  limit them to the maximum possible
	- block output sizes over 32768 bytes won't be rejected